Docker/CodeSample/capstone/k8s/optional/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: visits-api
  namespace: container-lab
spec:
  ingressClassName: nginx
  rules:
    - host: visits.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: visits-api
                port:
                  name: http
